manifests/cluster/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    app: copyparty
  ports:
    - name: http
      protocol: TCP
      port: 3923
      targetPort: 3923
