manifests/cluster/copyparty/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`copyparty.cowlab.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: copyparty
          port: 3923
  tls:
    certResolver: letsencrypt
